<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhizmali.batmanfirebase.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_weight_height"
            android:layout_height="@dimen/logo_weight_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:src="@mipmap/resetpassword"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/textview_padding"
            android:text="@string/lbl_forgot_password"
            android:textSize="@dimen/textview_textsize"
            android:textStyle="bold"
            android:textColor="@color/colorLblResetPass"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/textview_padding"

            android:text="@string/lbl_forgot_password_msg"
            android:textSize="@dimen/textvew_forgot_password_msg_size"
            android:textColor="@color/colorLblResetPass"
            android:textAllCaps="false"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/activity_reset_password_edttext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_layout_marginBottom"
                android:layout_marginTop="@dimen/edit_text_layout_marginTop"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextEdittext" />

        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/activity_reset_password_btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_marginTop"
            android:background="@color/colorButtonBackground"
            android:text="@string/btn_reset_password"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/colorTextButton"
            />

        <Button
            android:id="@+id/activity_reset_password_btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_layout_marginTop"
            android:layout_marginTop="@dimen/btn_layout_marginTop"
            android:text="@string/btn_back"
            android:background="@null"
            android:textColor="@color/colorTextButtonText"
            android:textStyle="bold"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_reset_password_progressbar"
        android:layout_width="@dimen/progressbar_weight_height"
        android:layout_height="@dimen/progressbar_weight_height"
        android:layout_gravity="center|bottom"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
