<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhizmali.batmanfirebase.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_weight_height"
            android:layout_height="@dimen/logo_weight_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/logo_margin_bottom"
            android:src="@mipmap/login"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/activity_login_edittxt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_layout_marginBottom"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextEdittext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_login_edittxt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_layout_marginBottom"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textColor="@color/colorTextEdittext"
                />

        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_marginTop"
            android:text="@string/btn_login"
            android:background="@color/colorButtonBackground"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/activity__btn_txt_size"
            />

        <Button
            android:id="@+id/activity_login_btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_marginTop"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorTextButtonText"
            android:textSize="@dimen/activity__btn_txt_size"
            android:textStyle="bold" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/activity_login_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_marginTop"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorTextButtonText"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:textSize="@dimen/activity__btn_txt_size"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/activity_login_progress_bar"
        android:layout_width="@dimen/progressbar_weight_height"
        android:layout_height="@dimen/progressbar_weight_height"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/progressbar_layout_marginBottom"
        android:visibility="gone"/>


</android.support.design.widget.CoordinatorLayout>
