<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhizmali.batmanfirebase.fragments.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/fragment_edittxt_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_layout_marginBottom"
                android:inputType="textPassword"
                android:hint="@string/hint_change_password"
                android:textColor="@color/colorTextEdittext"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <EditText
                android:id="@+id/fragment_edittxt_change_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/edit_text_layout_marginBottom"
                android:inputType="textPassword"
                android:hint="@string/hint_change_password_again"
                android:textColor="@color/colorTextEdittext"
                />

        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/fragment_button_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_layout_marginTop"
            android:text="@string/btn_change_password"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTextButton"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="@dimen/activity__btn_txt_size"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/fragment_change_pass_progress_bar"
        android:layout_width="@dimen/progressbar_weight_height"
        android:layout_height="@dimen/progressbar_weight_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/progressbar_layout_marginBottom"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
